Seperate Countries added

--- a/index.html
+++ b/index.html
@@ -29,31 +29,27 @@
         <div class="hero-content">
             <h1>Your Journey Begins Here</h1>
             <p>Explore breathtaking destinations and create unforgettable memories with us.</p>
-            <div class="search-bar">
-                <input type="text" placeholder="Search destinations, activities...">
-                <button type="button"><i class="fas fa-search"></i> Search</button>
-            </div>
         </div>
     </section>
 
     <section id="destinations" class="destinations-section">
         <h2>Featured Destinations</h2>
         <div class="destination-grid">
-            <div class="destination-card">
+            <a href="paris.html" class="destination-card">
                 <img src="images/paris.png" alt="Paris, France">
                 <h3>Paris, France</h3>
                 <p>The City of Light awaits with its iconic landmarks and romantic charm.</p>
-            </div>
-            <div class="destination-card">
+            </a>
+            <a href="kyoto.html" class="destination-card">
                 <img src="images/kyoto.png" alt="Kyoto, Japan">
                 <h3>Kyoto, Japan</h3>
                 <p>Immerse yourself in ancient temples and serene gardens.</p>
-            </div>
-            <div class="destination-card">
+            </a>
+            <a href="bali.html" class="destination-card">
                 <img src="images/bali.png" alt="Bali, Indonesia">
                 <h3>Bali, Indonesia</h3>
                 <p>Discover a tropical paradise with stunning beaches and vibrant culture.</p>
-            </div>
+            </a>
         </div>
     </section>
 
@@ -108,7 +104,6 @@
         </div>
     </footer>
 
-    <!-- The Popup Modal -->
     <div id="demo-popup" class="modal-overlay">
         <div class="modal">
             <span class="close-btn">&times;</span>
