--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wanderlust Adventures - Travel Agency</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
@@ -36,17 +36,17 @@
         <h2>Featured Destinations</h2>
         <div class="destination-grid">
             <a href="paris.html" class="destination-card">
-                <img src="images/paris.png" alt="Paris, France">
+                <img src="assets/images/paris.png" alt="Paris, France">
                 <h3>Paris, France</h3>
                 <p>The City of Light awaits with its iconic landmarks and romantic charm.</p>
             </a>
             <a href="kyoto.html" class="destination-card">
-                <img src="images/kyoto.png" alt="Kyoto, Japan">
+                <img src="assets/images/kyoto.png" alt="Kyoto, Japan">
                 <h3>Kyoto, Japan</h3>
                 <p>Immerse yourself in ancient temples and serene gardens.</p>
             </a>
             <a href="bali.html" class="destination-card">
-                <img src="images/bali.png" alt="Bali, Indonesia">
+                <img src="assets/images/bali.png" alt="Bali, Indonesia">
                 <h3>Bali, Indonesia</h3>
                 <p>Discover a tropical paradise with stunning beaches and vibrant culture.</p>
             </a>
@@ -114,6 +114,6 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
